<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MealsDeliveryRateFragment">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/mealType"
            android:textColor="@color/purple_500"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">


            <Button
                android:id="@+id/oneButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/vegetable"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="100dp" />
            <Button
                android:id="@+id/twoButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/meat"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="100dp" />
            <Button
                android:id="@+id/threeButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="100dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/personalNextButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="100dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>