<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AdminProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/adminName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/usersBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/users"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/mealsBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/meals"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/menuBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/emailBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>