<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mealDeliveryRate"
    tools:context=".fragment.MealsDeliveryRateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/deliveryFrequency"
            android:textColor="@color/purple_500"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/oneButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginRight="10dp" />

            <Button
                android:id="@+id/twoButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginRight="10dp" />
            <Button
                android:id="@+id/threeButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/mealQuantity"
            android:textColor="@color/purple_500"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">


            <Button
                android:id="@+id/onePersonButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginRight="10dp"/>
            <Button
                android:id="@+id/twoPersonButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginRight="10dp" />
            <Button
                android:id="@+id/threePersonButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginRight="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/personalNextButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>