<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/personalDetailsFragUpdate"
    tools:context=".fragment.PersonalDetailsFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First Name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:inputType="text"
                        android:id="@+id/firstNameAdminUpdate"
                        android:enabled="false"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last Name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:inputType="text"
                        android:id="@+id/lastNameAdminUpdate"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="House Number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:inputType="text"
                        android:id="@+id/houseNUmberAdminUpdate" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Street">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:inputType="text"
                        android:id="@+id/streetAdminUpdate"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="City ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:inputType="text"
                        android:id="@+id/cityAdminUpdate" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/province"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/provinceSpinAdminEditProf"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Postal Code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="150dp"
                        android:layout_height="58dp"
                        android:inputType="text"
                        android:id="@+id/postalCodeAdminUpdate" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneNumberAdminEditProf"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone Number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:inputType="number"
                        android:id="@+id/phoneNumberAdminUpdate" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/userStatus"
            android:textColor="@color/purple_500"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/statusAdminEditProf"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/okButtonUserUpdate"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:text="@string/ok"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginLeft="50dp"
                android:layout_alignParentLeft="true"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/cancelButtonUserUpdate"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginRight="50dp"
                android:layout_alignParentRight="true"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/updateUserButton"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_centerHorizontal="true"
                android:text="@string/update"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="visible" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>